2007-08-31  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_as_classes/as_netstream.cpp
		* gameswf/gameswf_as_classes/as_xmlsocket.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_timers.cpp
		* gameswf/gameswf_value.cpp
		as_environment* ==> weak_ptr<as_environment>	m_env
		We need to watch m_env, testcase:
		the movie executes the following opcodes
		_global.x = new Object();
		loadMovie("another.swf", _root);
		the result of this:
		current movie will be deleted and it environment too

2007-08-30  Vitaly Alexeev <tishka92@yahoo.com>

		* base/container.h
		* base/tu_loadlib.cpp
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_as_classes/as_string.cpp
		* gameswf/gameswf_log.cpp
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_value.cpp
		* gameswf/gameswf_value.h
		* gameswf/win32/VC8/gameswf.vcproj
		Added the supporting of C_FUNCTION getter/setter

2007-08-27  Vitaly Alexeev <tishka92@yahoo.com>

		* base/container.h
		* base/image.h
		* base/logger.h
		* base/ogl.h
		* base/tu_file.h
		* base/tu_loadlib.h
		* base/tu_types.h
		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_freetype.cpp
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_impl.h
		* gameswf/gameswf_log.h
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_plugin.h
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/gameswf_types.h
		* gameswf/gameswf_value.cpp
		* gameswf/gameswf_value.h
		* gameswf/plugins/sample/sample.cpp
		* gameswf/plugins/sample/sample.h
		* gameswf/plugins/sample/test.fla
		* gameswf/plugins/sample/test.swf
		* gameswf/plugins/sample/win32/sample.vcproj
		* gameswf/win32/VC8/gameswf.sln
		* gameswf/win32/VC8/gameswf.vcproj