@@ -1,3 +1,13 @@
+2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* gameswf/gameswf.h
+		* gameswf/gameswf_sound_handler_sdl.cpp
+		* gameswf/gameswf_sound_handler_sdl.h
+		* gameswf/gameswf_sprite.cpp
+		Fixed the sound bug (thanks to David Ruzicka).
+		When the movie playback is paused, currently played sample
+		continues to play even then. Added pause(..) method to sound_handler
+
 2007-08-31  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf_as_classes/as_mcloader.cpp
